--- a/frontend/src/app/features/shop/product-details/product-details.component.html
+++ b/frontend/src/app/features/shop/product-details/product-details.component.html
@@ -15,7 +15,7 @@
         <div class="bg-secondary-100 relative h-96 lg:h-auto">
           <img
             *ngIf="product.images && product.images.length > 0"
-            [src]="product.images[0].image_url"
+            [src]="getImageUrl(product.images[0].image_url)"
             [alt]="product.name"
             class="absolute inset-0 w-full h-full object-cover"
           />
